docs: Expand benchmark guide with quick start, detailed performance results, Aeron cluster latency, zero-GC proof, and Linux benchmarking instructions, and remove contributing guidelines.